--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,8 @@
   ],
 
   "rules": {
-    "react/prop-types": 0,
-    "no-console": 1,
+    "react/prop-types": "off",
+    "no-console": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "no-unused-vars": "warn"
